--- a/src/main/resources/api.yaml
+++ b/src/main/resources/api.yaml
@@ -4,7 +4,7 @@ info:
   description: |
     API for managing users (ROLE_SUPER-ADMIN, ROLE_ADMIN, ROLE_CUSTOMER), accounts, sources, transactions
     with email-confirmed registration and role-based access control.
-  version: 1.2.0
+  version: 1.2.1
 
 servers:
   - url: https://localhost:8080
@@ -95,7 +95,9 @@ components:
         id: { type: string, format: uuid }
         balance: { type: number, format: double }
         currency: { type: string }
-        number: { type: integer }
+        number:
+          type: integer
+          description: Unique account number (e.g. MetaTrader ID)
         created_at: { type: string, format: date-time }
         updated_at: { type: string, format: date-time }
         person_id: { type: string, format: uuid }
@@ -149,14 +151,16 @@ components:
         token: { type: string }
         status:
           type: string
-          enum: [active, deactivated]
+          enum: [ACTIVE, DEACTIVATED]
 
     Transaction:
       type: object
       properties:
         id: { type: string, format: uuid }
         amount: { type: number, format: double, minimum: 0 }
-        direction: { type: string }
+        direction:
+          type: string
+          enum: [BUY, SELL]
         account_id: { type: string, format: uuid }
         source_id: { type: string, format: uuid }
         created_at: { type: string, format: date-time }
@@ -167,16 +171,26 @@ components:
       required: [amount, direction, account_id, source_id]
       properties:
         amount: { type: number, format: double, minimum: 0 }
-        direction: { type: string }
+        direction:
+          type: string
+          enum: [BUY, SELL]
         account_id: { type: string, format: uuid }
         source_id: { type: string, format: uuid }
 
-paths:
+    TransactionUpdate:
+      type: object
+      properties:
+        amount: { type: number, format: double, minimum: 0 }
+        direction:
+          type: string
+          enum: [BUY, SELL]
+        source_id: { type: string, format: uuid }
 
-  /auth/register:
+paths:
+  /auth/signup:
     post:
       tags: [Auth]
-      summary: Register a new user with password (email confirmation required)
+      summary: Register new user
       requestBody:
         required: true
         content:
@@ -184,29 +198,15 @@ paths:
             schema:
               $ref: '#/components/schemas/UserCreateRequest'
       responses:
-        '200':
-          description: Confirmation email sent with activation link
-
-  /auth/confirm-email:
-    get:
-      tags: [Auth]
-      summary: Confirm email using token
-      parameters:
-        - name: token
-          in: query
-          required: true
-          schema:
-            type: string
-      responses:
-        '200':
-          description: Email confirmed, account activated
+        '201':
+          description: User created successfully
         '400':
-          description: Invalid or expired token
+          description: Invalid input
 
   /auth/login:
     post:
       tags: [Auth]
-      summary: Authenticate a user and get a token
+      summary: Log in and receive JWT token
       requestBody:
         required: true
         content:
@@ -215,20 +215,20 @@ paths:
               $ref: '#/components/schemas/AuthLogin'
       responses:
         '200':
-          description: Authentication successful
+          description: Successful login
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthToken'
         '401':
-          description: Invalid credentials
+          description: Unauthorized
 
-  # Users
   /users:
     get:
       tags: [Users]
-      summary: List all users
-      security: [ { bearerAuth: [ ] } ]
+      summary: Get all users
+      security:
+        - bearerAuth: []
       responses:
         '200':
           description: List of users
@@ -238,40 +238,21 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        '204':
-          description: No users found
-
-    put:
-      tags: [Users]
-      summary: Update a user
-      security: [ { bearerAuth: [ ] } ]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserUpdate'
-      responses:
-        '204':
-          description: User updated
-        '403':
-          description: Unauthorized
 
   /users/{id}:
     get:
       tags: [Users]
-      summary: Get user details
-      security: [ { bearerAuth: [ ] } ]
+      summary: Get user by ID
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
           required: true
-          schema:
-            type: string
-            format: uuid
+          schema: { type: string, format: uuid }
       responses:
         '200':
-          description: User details
+          description: User found
           content:
             application/json:
               schema:
@@ -279,10 +260,31 @@ paths:
         '404':
           description: User not found
 
+    put:
+      tags: [Users]
+      summary: Update user
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema: { type: string, format: uuid }
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserUpdate'
+      responses:
+        '200':
+          description: User updated
+
     delete:
       tags: [Users]
       summary: Delete user
-      security: [ { bearerAuth: [ ] } ]
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -291,15 +293,28 @@ paths:
       responses:
         '204':
           description: User deleted
-        '403':
-          description: Unauthorized
 
-  # Accounts
   /accounts:
+    get:
+      tags: [Accounts]
+      summary: Get all accounts
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of accounts
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Account'
+
     post:
       tags: [Accounts]
-      summary: Create an account
-      security: [ { bearerAuth: [ ] } ]
+      summary: Create new account
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -310,51 +325,20 @@ paths:
         '201':
           description: Account created
 
-    get:
-      tags: [Accounts]
-      summary: List all accounts
-      security: [ { bearerAuth: [ ] } ]
-      responses:
-        '200':
-          description: List of accounts
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Account'
-        '204':
-          description: No accounts found
-
-    put:
-      tags: [Accounts]
-      summary: Update account
-      security: [ { bearerAuth: [ ] } ]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/AccountUpdate'
-      responses:
-        '204':
-          description: Account updated
-
   /accounts/{id}:
     get:
       tags: [Accounts]
-      summary: Get account details
-      security: [ { bearerAuth: [ ] } ]
+      summary: Get account by ID
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
           required: true
-          schema:
-            type: string
-            format: uuid
+          schema: { type: string, format: uuid }
       responses:
         '200':
-          description: Account details
+          description: Account found
           content:
             application/json:
               schema:
@@ -362,10 +346,31 @@ paths:
         '404':
           description: Account not found
 
+    put:
+      tags: [Accounts]
+      summary: Update account
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema: { type: string, format: uuid }
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AccountUpdate'
+      responses:
+        '200':
+          description: Account updated
+
     delete:
       tags: [Accounts]
       summary: Delete account
-      security: [ { bearerAuth: [ ] } ]
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -375,12 +380,27 @@ paths:
         '204':
           description: Account deleted
 
-  # Sources
   /sources:
+    get:
+      tags: [Sources]
+      summary: Get all sources
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of sources
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Source'
+
     post:
       tags: [Sources]
-      summary: Create a source
-      security: [ { bearerAuth: [ ] } ]
+      summary: Create source
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -391,51 +411,20 @@ paths:
         '201':
           description: Source created
 
-    get:
-      tags: [Sources]
-      summary: List all sources
-      security: [ { bearerAuth: [ ] } ]
-      responses:
-        '200':
-          description: List of sources
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Source'
-        '204':
-          description: No sources found
-
-    put:
-      tags: [Sources]
-      summary: Update source
-      security: [ { bearerAuth: [ ] } ]
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/SourceUpdate'
-      responses:
-        '204':
-          description: Source updated
-
   /sources/{id}:
     get:
       tags: [Sources]
-      summary: Get source details
-      security: [ { bearerAuth: [ ] } ]
+      summary: Get source by ID
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
           required: true
-          schema:
-            type: string
-            format: uuid
+          schema: { type: string, format: uuid }
       responses:
         '200':
-          description: Source details
+          description: Source found
           content:
             application/json:
               schema:
@@ -443,10 +432,31 @@ paths:
         '404':
           description: Source not found
 
+    put:
+      tags: [Sources]
+      summary: Update source
+      security:
+        - bearerAuth: []
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema: { type: string, format: uuid }
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/SourceUpdate'
+      responses:
+        '200':
+          description: Source updated
+
     delete:
       tags: [Sources]
       summary: Delete source
-      security: [ { bearerAuth: [ ] } ]
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -456,12 +466,27 @@ paths:
         '204':
           description: Source deleted
 
-  # Transactions
   /transactions:
+    get:
+      tags: [Transactions]
+      summary: Get all transactions
+      security:
+        - bearerAuth: []
+      responses:
+        '200':
+          description: List of transactions
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Transaction'
+
     post:
       tags: [Transactions]
-      summary: Create a transaction
-      security: [ { bearerAuth: [ ] } ]
+      summary: Create transaction
+      security:
+        - bearerAuth: []
       requestBody:
         required: true
         content:
@@ -472,27 +497,12 @@ paths:
         '201':
           description: Transaction created
 
-    get:
-      tags: [Transactions]
-      summary: List all transactions
-      security: [ { bearerAuth: [ ] } ]
-      responses:
-        '200':
-          description: List of transactions
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Transaction'
-        '204':
-          description: No transactions found
-
   /transactions/{id}:
     get:
       tags: [Transactions]
-      summary: Get transaction details
-      security: [ { bearerAuth: [ ] } ]
+      summary: Get transaction by ID
+      security:
+        - bearerAuth: []
       parameters:
         - name: id
           in: path
@@ -500,7 +510,7 @@ paths:
           schema: { type: string, format: uuid }
       responses:
         '200':
-          description: Transaction details
+          description: Transaction found
           content:
             application/json:
               schema:
